--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     crossorigin=""/>
 
         <!-- Our CSS -->
-        <link rel="stylesheet" type="text/css" href="Simple_Map/static/css/style.css">
+        <link rel="stylesheet" type="text/css" href="static/css/style.css">
 
 
 </head>
@@ -28,9 +28,11 @@
     crossorigin=""></script>
 
     <!-- API key -->
-    <script type="text/javascript" src="Simple_Map/static/js/config.js"></script>
+    <script type="text/javascript" src="static/js/config.js"></script>
+   
     <!-- Our JavaScript -->
-    <script type="text/javascript" src="Simple_Map/static/js/logic.js"></script>
-        
+    <script type="text/javascript" src="static/js/cities.js"></script>
+    <script type="text/javascript" src="static/js/logic.js"></script>
+    
 </body>
 </html>
